fix: menu on mobile

--- a/frontend/src/components/blog/Post/Post.module.css
+++ b/frontend/src/components/blog/Post/Post.module.css
@@ -14,3 +14,8 @@ pre {
     background-color: #e8e8e8;
     border-radius: 2px;
 }
+
+.BlogFooter {
+    text-align: right;
+    font-style: italic;
+}
